--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
 								<header class="major">
 									<h2>Things I've made</h2>
 								</header>
-								<div id="project">
+								<div id="project" class="iframecontainer">
 										<h3>This is a screensaver style project inspired by the VR game Beat Saber</h3>
-										<iframe height="600" width="auto" src="https://editor.p5js.org/nmitch.ca/present/Z4lUZie1Z"></iframe>
+										<iframe class="responsive-iframe" src="https://editor.p5js.org/nmitch.ca/present/Z4lUZie1Z"></iframe>
 										<p></p>
 								</div>
-								<div id="project">
+								<div id="project" class="iframecontainer">
 									<h3>This is a project that generates a random image every time you click</h3>
-									<iframe height="600" width="auto" src="https://preview.p5js.org/nmitch.ca/embed/9tf6KsMPg"></iframe>
+									<iframe class="responsive-iframe" src="https://preview.p5js.org/nmitch.ca/embed/9tf6KsMPg"></iframe>
 									<p>Click save to download as a .png</p>
 								</div>
-								<div id="project">
+								<div id="project" class="iframecontainer">
 									<h3>This is a Win 95 style screensaver</h3>
-									<iframe height="600" width="auto" src="https://preview.p5js.org/nmitch.ca/present/woCH6uMQQ"></iframe>
+									<iframe class="responsive-iframe" src="https://preview.p5js.org/nmitch.ca/present/woCH6uMQQ"></iframe>
 									<p>Click the "Draw Mode" button for more artistic flair</p>
 								</div>
 								<footer class="major">
