--- a/index.html
+++ b/index.html
@@ -95,6 +95,15 @@
 								<footer class="major">
 									<h3>More to come...</h3>
 								</footer>
+								<h3 id="projecttexttop">Another one of my pieces for genuary 2022</h3>
+								<div id="project" class="iframecontainer">
+									<iframe class="responsive-iframe" src="https://gradientsgonewrong.netlify.app/"></iframe>
+								</div>
+								<p id="projecttextbottom">The prompt for this one was "Gradients Gone Wrong"</p>
+
+								<footer class="major">
+									<h3>More to come...</h3>
+								</footer>
 							</section>
 							
 							<!--Second Section-->
